Wed Mar  4 17:11:23 1998  Adam Fedor  <fedor@doc.com>

	* Version: Version 0.5.0;

Thu Mar  5 15:40:00 1998  Richard Frith-Macdonald  <richard@brainstorm.co.uk>

	* src/GNUmakefile: removed byte_order.h and added NSByteOrder.h
	
	* src/NSData.m: Changed all byte-ordering code to use new byte order
	functions described in the Rhapsody documentation.

	* src/NSSerializer.m: Removed unused include file.

	* src/include/NSByteOrder.h: Added this file containing all the
	byte-order management functions described in the Rhapsody docs.

Wed Mar  4 21:06:00 1998  Richard Frith-Macdonald  <richard@brainstorm.co.uk>

	* src/NSConnection.m: Changed some objects to be OpenStep rather than
	old libobjects types.  Using NSMutableArray rather than Queue for the
	message queues seems to fixes bug with queue corruption under heavy
	load.
	
	* src/NSHost.m: Added methods for archiving NSHost objects and
	sending them bycopy over DO at all times.

	* src/NSRunLoop.m: ([-runUntilDate:forMode:]) modified to exit
	promptly if there are no more input sources for the run loop.

Mon Mar  2 10:04:57 1998  Adam Fedor  <fedor@doc.com>

	* ANNOUNCE, NEWS, GNUstep-HOWTO: Update.
	* doc/faq.tmpl.texi, doc/gnustep-howto.tmpl.texi,
	doc/news.tmpl.texi: Likewise.
	* src/GNUmakefile (GENERATED_HAFILES): Add include/o_...

Thu Feb 26 12:49:10 1998  Adam Fedor  <fedor@doc.com>

	* configure.in: Use AC_CHECK_HEADERS instead of AC_CHECK_HEADER.
	* src/include/config.h.in: Regenerate.

	* doc/GNUmakefile (HTML_FILES): Add fac_toc.html
	* doc/Makefile.postamble: (fac_toc.html): New target.
	
	* src/include/NSDictionary.h: Add NSMutableCopying protocol
	(suggested by David Fritzsche <david@dementia.wupper.de>).

Thu Feb 26  8:12:00 1998  Richard Frith-Macdonald  <richard@brainstorm.co.uk>

	* Tools/defaults.m: Removed autorelease debugging.
	* Tools/dread.m: Removed autorelease debugging.
	* Tools/dremove.m: Removed autorelease debugging.
	* Tools/dwrite.m: Removed autorelease debugging.
	